# labo-smart-home

./: .gitignore  .markdownlint-cli2.yaml  .prettierignore  CITATION.cff  DOCS.md  FAQ.md  GENERATOR_ARCHITECTURE.md  GETTING_STARTED.md  GLOSSARY.md  HARDWARE_OVERVIEW.md  NOTICE  QUALITY_GATE.md  README.md  REFERENCE_STACK.md  STACK_CONFIG.md  TROUBLESHOOTING.md  lsh-stack.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release-pyz.yml
examples/: lsh_stack.complete.toml  lsh_stack.minimal.toml  lsh_stack.network-clicks.toml  lsh_stack.toml
schemas/: lsh_stack.schema.json
src/lsh_stack_config/: __init__.py  __main__.py  bridge_ota_script.py  cli.py  cli_runtime.py  commands.py  composer.py  core_export.py  deploy.py  doctor.py  errors.py  generated_scripts.py  launcher.py  models.py  parser.py  paths.py  platformio_batch_script.py  platformio_bridge_targets_script.py  platformio_core_system_tools_script.py  platformio_utils.py  render.py  render_common.py  scaffold.py  scaffold_templates.py  status.py
tests/: test_stack_cli.py  test_stack_config.py
